@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-27T01:53:05Z",
+  "timestamp" : "2022-08-29T16:23:56Z",
   "count_outdated" : 117,
   "uniques_outdated" : 80,
-  "count" : 125,
-  "uniques" : 86,
+  "count" : 129,
+  "uniques" : 89,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 6, 6 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
