@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 5,
+  "count": 12,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 6,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
