@@ -1,3 +1,11 @@
+2022-08-29T16:23:56Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950101890
+* notice: last 14d: unq all: 6 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 86 125
+* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 89 129
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-27T01:53:05Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937590230
 * notice: last 14d: unq all: 5 8
